# ENG_API_FUTEBOL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
API/: apimatches.py  connectdb.py
Docker_Api/: docker-compose.yml  docker_postgres_init_matches.sql  docker_postgres_init_stats.sql
