[tool.poetry]
name = "eng-api-futebol"
version = "0.1.0"
description = ""
authors = ["Prog-LucasAlves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.18.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
